// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component DepartmentCourses within Layout for third cycle studies match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-labelledby="kth-local-navigation-title--mobile"
      class="kth-local-navigation--mobile"
    >
      <button
        class="kth-button menu"
        id="kth-local-navigation-title--mobile"
      >
        <span>
          ABE/Concrete Structures
        </span>
      </button>
      <dialog
        class="kth-mobile-menu left"
      >
        <div
          class="kth-mobile-menu__navigation"
        >
          <button
            class="kth-icon-button close"
          >
            <span
              class="kth-visually-hidden"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="mobile-menu__content"
        >
          <a
            class="kth-button back"
            href="/utbildning/forskarutbildning/kurser?l=en"
          >
            Courses
          </a>
          <h2>
            ABE/Concrete Structures
          </h2>
          <ul>
            <li>
              <a
                aria-current="page"
                href=""
              >
                Courses
              </a>
            </li>
          </ul>
        </div>
      </dialog>
    </nav>
    <nav
      aria-labelledby="local-navigation-title"
      class="kth-local-navigation col"
      id="mainMenu"
    >
      <a
        class="kth-button back"
        href="/utbildning/forskarutbildning/kurser?l=en"
      >
        Courses
      </a>
      <h2
        id="local-navigation-title"
      >
        ABE/Concrete Structures
      </h2>
      <ul>
        <li>
          <a
            aria-current="page"
            href=""
          >
            Courses
          </a>
        </li>
      </ul>
    </nav>
    <main
      class="col"
      id="mainContent"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <header
            role="presentation"
          >
            <h1
              aria-labelledby="page-heading page-sub-heading"
              id="page-heading"
            >
              Courses
            </h1>
            <p
              aria-hidden="true"
              class="page-sub-heading"
              id="page-sub-heading"
            >
              ABE/Concrete Structures
            </p>
          </header>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <article
            class="article article--no-start-margin "
          >
            <table
              class="table table-responsive"
            >
              <thead>
                <tr>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Course code
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Course name
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Scope
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Educational level
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <a
                      href="/student/kurser/kurs/F1C5031?l=en"
                    >
                      F1C5031
                    </a>
                  </td>
                  <td>
                    <a
                      href="/student/kurser/kurs/F1C5031?l=en"
                    >
                      Design Methods for Reinforced Concrete Structures
                    </a>
                  </td>
                  <td>
                    7.5 credits
                  </td>
                  <td>
                    Third cycle
                  </td>
                </tr>
                <tr>
                  <td>
                    <a
                      href="/student/kurser/kurs/FAF3115?l=en"
                    >
                      FAF3115
                    </a>
                  </td>
                  <td>
                    <a
                      href="/student/kurser/kurs/FAF3115?l=en"
                    >
                      Concrete and Other Cement Based Materials
                    </a>
                  </td>
                  <td>
                    7.5 credits
                  </td>
                  <td>
                    Third cycle
                  </td>
                </tr>
              </tbody>
            </table>
          </article>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <footer
            class="border-top mt-4 pt-1"
            id="articleFooter"
          >
            <address>
              Contact for questions regarding education at KTH: 
              <a
                href="https://www.kth.se/en/studies/master/general-study-counselling-1.621634"
              >
                Central study counseling
              </a>
              <br />
              Contact regarding technical matters on this page: 
              <a
                href="mailto:kopps@kth.se"
              >
                kopps@kth.se
              </a>
            </address>
          </footer>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Render component DepartmentCourses within Layout for third cycle studies match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-labelledby="kth-local-navigation-title--mobile"
      class="kth-local-navigation--mobile"
    >
      <button
        class="kth-button menu"
        id="kth-local-navigation-title--mobile"
      >
        <span>
          ABE/Betongbyggnad
        </span>
      </button>
      <dialog
        class="kth-mobile-menu left"
      >
        <div
          class="kth-mobile-menu__navigation"
        >
          <button
            class="kth-icon-button close"
          >
            <span
              class="kth-visually-hidden"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="mobile-menu__content"
        >
          <a
            class="kth-button back"
            href="/utbildning/forskarutbildning/kurser"
          >
            Kurser
          </a>
          <h2>
            ABE/Betongbyggnad
          </h2>
          <ul>
            <li>
              <a
                aria-current="page"
                href=""
              >
                Kurser
              </a>
            </li>
          </ul>
        </div>
      </dialog>
    </nav>
    <nav
      aria-labelledby="local-navigation-title"
      class="kth-local-navigation col"
      id="mainMenu"
    >
      <a
        class="kth-button back"
        href="/utbildning/forskarutbildning/kurser"
      >
        Kurser
      </a>
      <h2
        id="local-navigation-title"
      >
        ABE/Betongbyggnad
      </h2>
      <ul>
        <li>
          <a
            aria-current="page"
            href=""
          >
            Kurser
          </a>
        </li>
      </ul>
    </nav>
    <main
      class="col"
      id="mainContent"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <header
            role="presentation"
          >
            <h1
              aria-labelledby="page-heading page-sub-heading"
              id="page-heading"
            >
              Kurser
            </h1>
            <p
              aria-hidden="true"
              class="page-sub-heading"
              id="page-sub-heading"
            >
              ABE/Betongbyggnad
            </p>
          </header>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <article
            class="article article--no-start-margin "
          >
            <table
              class="table table-responsive"
            >
              <thead>
                <tr>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Kurskod
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Kursnamn
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Omfattning
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Utbildningsnivå
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <a
                      href="/student/kurser/kurs/F1C5031"
                    >
                      F1C5031
                    </a>
                  </td>
                  <td>
                    <a
                      href="/student/kurser/kurs/F1C5031"
                    >
                      Dimensioneringsmetoder för armerade betongkonstruktioner
                    </a>
                  </td>
                  <td>
                    7,5 hp
                  </td>
                  <td>
                    Forskarnivå
                  </td>
                </tr>
                <tr>
                  <td>
                    <a
                      href="/student/kurser/kurs/FAF3115"
                    >
                      FAF3115
                    </a>
                  </td>
                  <td>
                    <a
                      href="/student/kurser/kurs/FAF3115"
                    >
                      Betong och andra cementbaserade material
                    </a>
                  </td>
                  <td>
                    7,5 hp
                  </td>
                  <td>
                    Forskarnivå
                  </td>
                </tr>
              </tbody>
            </table>
          </article>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <footer
            class="border-top mt-4 pt-1"
            id="articleFooter"
          >
            <address>
              Kontakt för frågor om utbildning på KTH: 
              <a
                href="https://www.kth.se/studievagledning"
              >
                Central studievägledning
              </a>
              <br />
              Teknisk kontakt om denna sida: 
              <a
                href="mailto:kopps@kth.se"
              >
                kopps@kth.se
              </a>
            </address>
          </footer>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
